@@ -33,3 +33,16 @@
 //-----------------------------------------------------------------------------
 
 #include "cpoint.h"
+#include <cmath>
+
+namespace VSTGUI {
+
+//-----------------------------------------------------------------------------
+void CPoint::makeIntegral ()
+{
+	x = floor (x + 0.5);
+	y = floor (y + 0.5);
+}
+
+
+}
